// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestBuilder allows for pagination 1`] = `
Array [
  "SomeResource?%24top=2&%24skip=5",
]
`;

exports[`RequestBuilder chains mixed-format expands 1`] = `
Array [
  "SomeResource?%24expand=Dogs%2FPuppies%2CCats%2CKittens",
]
`;

exports[`RequestBuilder chains multiple expands 1`] = `
Array [
  "SomeResource?%24expand=Puppies%2CCats",
]
`;

exports[`RequestBuilder chains multiple filters 1`] = `
Array [
  "SomeResource?%24filter=%28A%20eq%20Ab%29%20or%20%28B%20eq%20Bc%29",
]
`;

exports[`RequestBuilder expands 1`] = `
Array [
  "SomeResource?%24expand=Puppies",
]
`;

exports[`RequestBuilder filters 1`] = `
Array [
  "SomeResource?%24filter=Something%20eq%20SomethingElse",
]
`;

exports[`RequestBuilder finds by id 1`] = `
Array [
  "SomeResource/1",
]
`;

exports[`RequestBuilder gets requests 1`] = `
Array [
  "SomeResource",
]
`;

exports[`RequestBuilder orders 1`] = `
Array [
  "SomeResource?%24orderby=MyField%20asc",
]
`;

exports[`RequestBuilder orders in custom order 1`] = `
Array [
  "SomeResource?%24orderby=MyField%20desc",
]
`;

exports[`RequestBuilder transforms result shapes 1`] = `
Object {
  "a": "yo",
}
`;

exports[`RequestBuilder transforms result shapes 2`] = `
Object {
  "b": "neigh",
}
`;
